--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@types/react": "^17.0.43",
     "@types/react-dom": "^17.0.14",
     "gh-pages": "^3.2.3",
+    "material-ui-image": "^3.3.2",
+    "mui-image": "^1.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
@@ -48,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^6.0.0"
   }
 }
